--- a/style.css
+++ b/style.css
@@ -27,12 +27,12 @@ nav{
     align-items: center;
     justify-content: space-between;
 }
-nav>ul>li{
+nav ul li{
     display: inline-block;
     list-style: none;
     margin: 10px 20px;
 }
-nav>ul>li>a{
+nav ul li a{
     text-decoration: none;
     color: #F0F2DC;
     font-size: 18px;
@@ -178,7 +178,54 @@ form input,form textarea{
     font-size: 15px;
     cursor: pointer;
 }
-footer>marquee{
-    font-size: 14px;
+footer p{
+    text-align: center;
+    font-size: 20px;
     font-weight: bold;
+}
+nav .icons{
+    display: none;
+}
+@media only screen and (width<=600px) {
+    #about p{
+        font-size: 15px;
+    }
+    .tab-links{
+        font-size: 18px;
+        margin-right: 10%;
+    }
+    .tab-contents>ul>li{
+        font-size: 15px
+    }
+    .tab-contents ul li span{
+        font-size: 18px;
+    }
+    .tab-contents ul li a{
+        font-size: 18px;
+    }
+    .nav-links{
+        top: 0;
+        right: -100vw;
+        position: fixed;
+        width: 100vw;
+        height: 100vh;
+        padding-top: 70px;
+        z-index: 1;
+        background-color: #260906;
+        transition: right 0.5s;
+    }
+    .nav-links ul li{
+        display: block;
+        margin: 20px 20%;
+        font-weight: bold;
+    }
+    .nav-links ul .fa-circle-xmark{
+        position: absolute;
+        top: 50px;
+        left: 20%;
+    }
+    #header>.container>nav .icons{
+        display: block;
+        font-size: 25px;
+    }
 }
