--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ header{
     height: 100vh;
 }
 .container{
-    padding: 10px 10%;
+    padding: 10px 7%;
 }
 img{
     width: 140px;
@@ -66,6 +66,7 @@ nav>ul>li>a:hover::after{
 }
 .tab-titles{
     display: flex;
+    flex-wrap: wrap;
     margin: 20px 0px 40px;
 }
 .tab-links{
@@ -106,9 +107,35 @@ nav>ul>li>a:hover::after{
 .tab-contents.active-link{
     display: block;
 }
+.card{
+    margin-top: 20px;
+    width: 340px;
+    height: 220px;
+    float: left;
+    margin-right: 20px;
+    padding: 5px;
+    border-radius: 5px;
+}
+.card:hover{
+    transform: translateY(-10px);
+    cursor: pointer;
+}
+.card img{
+    width: 330px;
+    height: 165px;
+}
+.card h2{
+    font-size: 20px;
+    text-align: center;
+    color: #F0F2DC;
+}
 .row{
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
+}
+#contact{
+    clear: both;
 }
 .contact-left{
     flex-basis: 35%;
@@ -126,7 +153,7 @@ nav>ul>li>a:hover::after{
 .social-icons{
     margin-top: 30px;
     text-decoration: none;
-    font-size: 30px;
+    font-size: 27px;
     display: inline-block;
     transition: transform 0.5s;
 }
@@ -186,7 +213,12 @@ footer p{
 nav .icons{
     display: none;
 }
-@media only screen and (width<=600px) {
+.msg{
+    color: #61b752;
+    margin-top: -40px;
+    display: block;
+}
+@media only screen and (width<=700px) {
     #about p{
         font-size: 15px;
     }
@@ -227,5 +259,20 @@ nav .icons{
     #header>.container>nav .icons{
         display: block;
         font-size: 25px;
+    }
+}
+@media only screen and (width<=900px){
+    .contact-left,.contact-right{
+        flex-basis: 100%;
+    }
+    .contact-left>p>i{
+        margin-right: 10px;
+        font-size: 20px;
+    }
+    .social-icons{
+        font-size: 25px;
+    }
+    .contact-right form input{
+        width: 100%;
     }
 }
